// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > snapshots > matches snapshot for basic label 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
>
  Email Address
</label>
`;

exports[`Label > snapshots > matches snapshot with custom className 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-red-500"
>
  Custom Label
</label>
`;

exports[`Label > snapshots > matches snapshot with htmlFor 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  for="email-input"
>
  Email
</label>
`;
